--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,8 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@color/login_bk_color"
+    android:focusableInTouchMode="true"
+    android:gravity="center"
     tools:context=".activity.ChangePasswordActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="THAY ĐỔI MẬT KHẨU"
+                android:textAlignment="center"
+                android:textColor="#16716D"
+                android:textSize="30sp"
+                android:textStyle="bold"></TextView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="20dp"
+                app:cardBackgroundColor="@color/whiteTextColor"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/til_changepass1"
+                        style="@style/parent"
+                        app:passwordToggleEnabled="true">
+
+                        <EditText
+                            android:id="@+id/oldpass"
+                            style="@style/modifiedEditText"
+                            android:drawableLeft="@drawable/ic_baseline_password"
+                            android:drawablePadding="10dp"
+                            android:hint="Mật khẩu cũ"
+                            android:inputType="textPassword"
+                            android:maxLines="1" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/til_changepass2"
+                        style="@style/parent"
+                        app:passwordToggleEnabled="true">
+
+                        <EditText
+                            android:id="@+id/newpass"
+                            style="@style/modifiedEditText"
+                            android:drawableLeft="@drawable/ic_baseline_password"
+                            android:drawablePadding="10dp"
+                            android:hint="@string/login_password_hint"
+                            android:inputType="textPassword"
+                            android:maxLines="1" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/til_changepass3"
+                        style="@style/parent"
+                        app:passwordToggleEnabled="true">
+
+                        <EditText
+                            android:id="@+id/renewpass"
+                            style="@style/modifiedEditText"
+                            android:drawableLeft="@drawable/ic_baseline_password"
+                            android:drawablePadding="10dp"
+                            android:hint="@string/login_repassword_hint"
+                            android:inputType="textPassword"
+                            android:maxLines="1" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/btnchangepass"
+                        android:layout_width="302dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:background="@drawable/btn_bg_design"
+                        android:text="Thay đổi mật khẩu"
+                        android:textColor="@color/whiteTextColor" />
+
+                    <Button
+                        android:id="@+id/btnbackchangepass"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:background="@drawable/btn_bg_design"
+                        android:onClick="backChangePass"
+                        android:text="Trở về"
+                        android:textColor="@color/whiteTextColor" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
