--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,8 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 app:cardBackgroundColor="@color/whiteTextColor"
                 app:cardCornerRadius="10dp">
 
@@ -57,7 +59,6 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/til_reglname"
                         style="@style/parent">
-
                         <EditText
                             android:id="@+id/editlastname"
                             style="@style/modifiedEditText"
@@ -69,30 +70,25 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/til_regsex"
+                        android:id="@+id/til_reggender"
                         style="@style/parent">
 
                         <RadioGroup
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
+                            <TextView
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:weightSum="3">
+                                android:layout_marginLeft="4dp"
+                                android:layout_marginRight="20dp"
+                                android:drawableLeft="@drawable/ic_baseline_fullname"
+                                android:drawablePadding="10dp"
+                                android:hint="Giới tính"
+                                android:textSize="14dp" />
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="4dp"
-                                    android:layout_marginRight="20dp"
-                                    android:drawableLeft="@drawable/ic_baseline_fullname"
-                                    android:drawablePadding="10dp"
-                                    android:hint="Giới tính"
-                                    android:textSize="14dp" />
-
-                                <RadioButton
+                            <RadioButton
                                     android:id="@+id/rbnam"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -104,25 +100,21 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Nữ" />
-                            </LinearLayout>
 
                         </RadioGroup>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/til_regbirthday"
                         style="@style/parent">
-
                         <EditText
                             android:id="@+id/editabirthday"
                             style="@style/modifiedEditText"
-                            android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                            android:drawableLeft="@drawable/ic_baseline_calendar"
                             android:drawablePadding="10dp"
                             android:hint="Ngày sinh"
-                            android:inputType="date"
-                            android:maxLines="1" />
+                            android:inputType="date" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -169,7 +161,8 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/til_regpass"
-                        style="@style/parent">
+                        style="@style/parent"
+                        app:passwordToggleEnabled="true">
 
                         <EditText
                             android:id="@+id/regpass"
@@ -183,7 +176,8 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/til_regrepass"
-                        style="@style/parent">
+                        style="@style/parent"
+                        app:passwordToggleEnabled="true">
 
                         <EditText
                             android:id="@+id/regrepass"
@@ -209,7 +203,7 @@
                         style="@style/parent"
                         android:layout_marginTop="@dimen/loginViewsMargin"
                         android:onClick="onLoginClick"
-                        android:text="Bạn đã có tài khoản?"
+                        android:text="Bạn đã có tài khoản? Đăng nhập ngay!"
                         android:textAlignment="center"
                         android:textColor="@color/themeColor"
                         android:textSize="17sp"
@@ -222,25 +216,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:weightSum="12">
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"
-                    android:layout_weight="3"
-                    android:background="@color/whiteTextColor" />
-
-                <TextView
-                    style="@style/viewParent.headerText.NoMode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
-                    android:text="Use other Methods"
-                    android:textAlignment="center"
-                    android:textColor="@color/whiteTextColor"
-                    android:textSize="12sp" />
+                android:gravity="center">
 
                 <View
                     android:layout_width="0dp"
@@ -253,6 +229,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="center">
 
                 <ImageView
