update ChangeInfo, changePassword

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -36,7 +36,7 @@
             <ListView
                 android:id="@+id/listviewcart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             </ListView>
         </FrameLayout>
