--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#E8E5E5"
     android:orientation="vertical"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.SearchActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
