--- a/app/src/main/res/layout/activity_info_cart.xml
+++ b/app/src/main/res/layout/activity_info_cart.xml
@@ -3,32 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".activity.InfoCartActivity">
 
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_infocart"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="#1E88E5"
         android:gravity="center"
-        android:text="THÔNG TIN THANH TOÁN"
-        android:textColor="@color/white"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        app:title="THÔNG TIN THANH TOÁN"
+        app:titleTextColor="@color/white">
+
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="vertical">
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Người nhận" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/tv_ttgh"
+            android:textSize="25dp" />
 
-        <com.google.android.material.textfield.TextInputLayout style="@style/parent">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/namepayment"
+            style="@style/parent">
 
             <EditText
                 android:id="@+id/txtnguoinhan"
@@ -40,13 +52,10 @@
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Số điện thoại" />
 
-        <com.google.android.material.textfield.TextInputLayout style="@style/parent">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/phonepayment"
+            style="@style/parent">
 
             <EditText
                 android:id="@+id/txtsdtnguoinhan"
@@ -58,13 +67,10 @@
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Địa chỉ nhận" />
 
-        <com.google.android.material.textfield.TextInputLayout style="@style/parent">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/addresspayment"
+            style="@style/parent">
 
             <EditText
                 android:id="@+id/txtdiachi"
@@ -76,40 +82,17 @@
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
+        <Button
+            android:id="@+id/btncheckout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btncheckout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:layout_marginRight="50dp"
-                android:background="@drawable/btn_bg_design"
-                android:paddingLeft="50dp"
-                android:paddingRight="50dp"
-                android:text="Đặt hàng"
-                android:textColor="@color/whiteTextColor" />
-
-            <Button
-                android:id="@+id/btnbackcart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:background="@drawable/btn_bg_design"
-                android:paddingLeft="50dp"
-                android:paddingRight="50dp"
-                android:text="Trở về"
-                android:textColor="@color/whiteTextColor" />
-
-
-        </LinearLayout>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="50dp"
+            android:background="@drawable/btn_bg_design"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="50dp"
+            android:text="Đặt hàng"
+            android:textColor="@color/whiteTextColor" />
 
     </LinearLayout>
 </LinearLayout>
