--- a/app/src/main/res/layout/line_order.xml
+++ b/app/src/main/res/layout/line_order.xml
@@ -42,5 +42,13 @@
             android:text="date"
             android:textSize="15dp" />
 
+        <TextView
+            android:id="@+id/tv_person"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="person"
+            android:textSize="15dp" />
+
     </LinearLayout>
 </LinearLayout>
