--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_infocart"
+            android:id="@+id/toolbar_forgot"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="#1E88E5"
