--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,6 +27,7 @@
                 android:textAlignment="center"
                 android:textColor="#16716D"
                 android:textSize="30sp"
+                android:layout_marginTop="10dp"
                 android:textStyle="bold"></TextView>
 
             <androidx.cardview.widget.CardView
