--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,10 +7,6 @@
     android:orientation="vertical"
     tools:context=".activity.ForgotPasswordActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_forgot"
             android:layout_width="match_parent"
@@ -20,50 +16,63 @@
             android:textSize="30dp"
             app:title="Khôi phục mật khẩu"
             app:titleTextColor="@color/white"></androidx.appcompat.widget.Toolbar>
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:gravity="center"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:weightSum="2">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/tv_recovery"
-            android:textSize="25dp" />
+            android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_recoveremail"
-            style="@style/parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Mời chọn phương thức khôi phục"
+                android:textColor="@color/purple_700"
+                android:textSize="20dp" />
 
-            <EditText
-                android:id="@+id/recoveryemail"
-                style="@style/modifiedEditText"
-                android:drawableLeft="@drawable/ic_baseline_email"
-                android:drawablePadding="10dp"
-                android:hint="@string/login_email_hint"
-                android:inputType="textEmailAddress"
-                android:maxLines="1" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnrecovery"
+                <Button
+                    android:id="@+id/btnrecemail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/round_corners"
+                    android:text="Qua email" />
+
+                <Button
+                    android:id="@+id/btnrecsdt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/round_corners"
+                    android:text="Qua số điện thoại" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/frame_container1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="50dp"
-            android:background="@drawable/btn_bg_design"
-            android:text="@string/recoverypassword"
-            android:textColor="@color/whiteTextColor" />
-
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"></FrameLayout>
 
     </LinearLayout>
+
+
 </LinearLayout>
