--- a/app/src/main/res/layout/line_producthome.xml
+++ b/app/src/main/res/layout/line_producthome.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layouthome"
     android:layout_width="190dp"
     android:layout_height="256dp"
-    android:id="@+id/layouthome"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -13,82 +15,52 @@
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp">
 
-
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                style="@style/style_linear_mcv"
+                android:layout_weight="1">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imgProduct"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp" />
 
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_gravity="top|right"
-                        android:src="@drawable/hot_product" />
-
-                    <ImageView
-                        android:id="@+id/imgProduct"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_margin="5dp" />
-
-                    <TextView
-                        android:id="@+id/tvnameproduct"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Tên sản phẩm"
-                        android:textColor="#854B4B"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tvnameproduct"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:text="Tên sản phẩm"
+                    android:textColor="#854B4B"
+                    android:textSize="18sp" />
 
-                    <TextView
-                        android:id="@+id/tvpriceproduct"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="2sp"
-                        android:gravity="center"
-                        android:text="Giá sản phẩm"
-                        android:textColor="#854B4B"
-                        android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/tvpriceproduct"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2sp"
+                    android:gravity="center"
+                    android:text="Giá sản phẩm"
+                    android:textColor="#854B4B"
+                    android:textSize="18sp" />
 
-                    <Button
-                        android:id="@+id/btn_addcarthome"
-                        android:layout_width="35sp"
-                        android:layout_height="35sp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_margin="2sp"
-                        android:background="@drawable/roundbutton"
-                        android:backgroundTint="#83C181"
-                        android:text="+"
-                        android:textColor="@color/whiteTextColor"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/btn_addcarthome"
+                    android:layout_width="35sp"
+                    android:layout_height="35sp"
+                    android:layout_gravity="end"
+                    android:layout_margin="2sp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="#83C181"
+                    android:text="+"
+                    android:textColor="@color/whiteTextColor"
+                    android:textSize="20sp" />
             </LinearLayout>
-
-
         </FrameLayout>
-
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
